Add the inventory visibility module

--- a/pom.xml
+++ b/pom.xml
@@ -1673,6 +1673,11 @@
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.nemesis.platform.module.inventory</groupId>
+                <artifactId>nemesis-module-inventoryvisibility</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-personalization</artifactId>
                 <version>${nemesis.version}</version>
