--- a/pom.xml
+++ b/pom.xml
@@ -355,6 +355,7 @@
         <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
         <spring-webflow.version>2.5.0.RELEASE</spring-webflow.version>
+        <spring-security-ldap.version>5.3.0.RELEASE</spring-security-ldap.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
         <spring-hateoas.version>1.0.1.RELEASE</spring-hateoas.version>
@@ -701,6 +702,12 @@
                 <version>${spring-webflow.version}</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-ldap</artifactId>
+                <version>${spring-security-ldap.version}</version>
+            </dependency>
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
@@ -1962,6 +1969,11 @@
             <dependency>
                 <groupId>io.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-invoice</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module</groupId>
+                <artifactId>nemesis-module-ldap</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
