--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,6 @@
         <graphql-spqr.version>0.0.4</graphql-spqr.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>28.1-jre</guava.version>
-        <reactor.version>0.1.0</reactor.version>
         <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
         <!--hibernate.version>5.2.17.Final</hibernate.version-->
@@ -356,7 +355,6 @@
         <!--spring.version>5.1.0.BUILD-SNAPSHOT</spring.version-->
         <spring-mobile.version>2.0.0.M2</spring-mobile.version>
         <spring-webflow.version>2.5.0.RELEASE</spring-webflow.version>
-        <spring-security-ldap.version>5.3.0.RELEASE</spring-security-ldap.version>
         <!--spring-security.version>5.0.2.BUILD-20180214.212521-49</spring-security.version-->
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
         <spring-hateoas.version>1.0.1.RELEASE</spring-hateoas.version>
@@ -385,6 +383,7 @@
         <xerces.version>2.12.0</xerces.version>
         <xml-apis.version>1.4.01</xml-apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
+        <xe-rates-client.version>0.1.0</xe-rates-client.version>
         <xmpcore.version>6.1.10</xmpcore.version>
         <xstream.version>1.4.11</xstream.version>
         <yubico.version>3.1.0</yubico.version>
@@ -701,13 +700,6 @@
                 <groupId>org.springframework.webflow</groupId>
                 <artifactId>spring-webflow</artifactId>
                 <version>${spring-webflow.version}</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-ldap</artifactId>
-                <version>${spring-security-ldap.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
@@ -1639,7 +1631,7 @@
             <dependency>
                 <groupId>com.xe.xecd</groupId>
                 <artifactId>xecd-rates-client</artifactId>
-                <version>${reactor.version}</version>
+                <version>${xe-rates-client.version}</version>
             </dependency>
             <!-- Nemesis -->
             <dependency>
