--- a/pom.xml
+++ b/pom.xml
@@ -1718,6 +1718,11 @@
             </dependency>
             <dependency>
                 <groupId>io.nemesis.platform.module.tax</groupId>
+                <artifactId>nemesis-module-commontax</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.tax</groupId>
                 <artifactId>nemesis-module-avalara</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
