--- a/pom.xml
+++ b/pom.xml
@@ -2013,6 +2013,11 @@
             </dependency>
             <dependency>
                 <groupId>io.nemesis.platform.module.widget</groupId>
+                <artifactId>nemesis-widget-bestbuy</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.widget</groupId>
                 <artifactId>nemesis-widget-common</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
