--- a/pom.xml
+++ b/pom.xml
@@ -247,10 +247,12 @@
         <jstree.version>3.3.3</jstree.version>
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
         <license-maven-plugin>1.20</license-maven-plugin>
+        <lutung.version>0.0.8</lutung.version>
         <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <kie.version>7.36.1.Final</kie.version>
         <klarna-sdk.version>4.0.3</klarna-sdk.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
+        <maleorang.version>3.0-0.9.8</maleorang.version>
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
         <maven-archetype-plugin.version>3.1.2</maven-archetype-plugin.version>
         <maven-filtering.version>3.1.1</maven-filtering.version>
@@ -1569,6 +1571,16 @@
                 <artifactId>analysis-common</artifactId>
                 <version>${elasticsearch.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.raisin</groupId>
+                <artifactId>maleorang</artifactId>
+                <version>${maleorang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.mandrillapp.wrapper.lutung</groupId>
+                <artifactId>lutung</artifactId>
+                <version>${lutung.version}</version>
+            </dependency>
             <!-- Camunda -->
             <dependency>
                 <groupId>org.camunda.bpm</groupId>
@@ -1959,6 +1971,16 @@
             <dependency>
                 <groupId>io.nemesis.platform.module.email</groupId>
                 <artifactId>nemesis-module-sendgrid</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.email</groupId>
+                <artifactId>nemesis-module-mailchimp</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module.email</groupId>
+                <artifactId>nemesis-module-mandrill</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
