--- a/pom.xml
+++ b/pom.xml
@@ -1848,6 +1848,11 @@
             </dependency>
             <dependency>
                 <groupId>io.nemesis.platform.module</groupId>
+                <artifactId>nemesis-module-hotimport</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-banking</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
